--- a/camera_ready/preamble.tex
+++ b/camera_ready/preamble.tex
@@ -17,6 +17,7 @@
 \usepackage{multirow}
 \usepackage{caption}
 \usepackage{subcaption}
+\usepackage{siunitx}
 
 % Custom environment
 \newtheorem{problem}{Problem}
