--- a/camera_ready/problem.tex
+++ b/camera_ready/problem.tex
@@ -19,7 +19,7 @@ We define the $\varepsilon$-robust version of $\Phi$, denoted by $\Phi_\varepsil
 where $\avoid'=\avoid\oplus\ball_\varepsilon(0)$ and 
 $\goal'=\goal\ominus\ball_\varepsilon(0)$, and $\oplus$ and $\ominus$ are set operators denoting the Minkowski addition and difference, respectively. 
 Intuitively, if a trajectory $x_0,x_1,\ldots$ satisfies $\Phi_\varepsilon$, then any trajectory $y_0, y_1,\ldots$ such that
-$|x_i - y_i | \leq \varepsilon$ satisfies $\Phi$.
+$\|x_i - y_i \| \leq \varepsilon$ satisfies $\Phi$.
 
 
 \begin{resp}
@@ -42,7 +42,8 @@ $|x_i - y_i | \leq \varepsilon$ satisfies $\Phi$.
 \end{comment}
 
 It is important to notice that any solution for this problem is required to provide a \emph{formal guarantee} on the satisfaction of $\Phi$, 
-i.e., the reach-avoid specification $\Phi$ \emph{must} be satisfied under any disturbance affecting the control systems. \MS{Further, the solution must not require any information exchange between the different agents. Embedding this feature simplifies implementation by eliminating the need for regular synchronization between agents during runtime.}
+i.e., the reach-avoid specification $\Phi$ \emph{must} be satisfied under every value of the disturbances affecting the control systems. 
+Further, the solution must not require any information exchange between the different agents. Embedding this feature simplifies implementation by eliminating the need for regular synchronization between agents during runtime.
 
 %The robustness margin $\varepsilon$ accounts for the possible tracking error of the ABCD-generated controller in Step~\ref{step:abcd} while tracking the nominal trajectory.
 %Because ALTRO ignores the disturbances, hence a positive tracking error is inevitable.
