--- a/camera_ready/theory.tex
+++ b/camera_ready/theory.tex
@@ -2,11 +2,9 @@
 
 % \section{Robust Reach-Avoid for Multi-Agent Systems}
 
-% \subsection{Solution Outline}
+ \subsection{Solution Outline}
 To solve the decentralized control problem, 
-we propose to compute a nominal trajectory over the simplified dynamical model of the product system and then to
-employ a guaranteed method to synthesize controllers locally that account for model mismatches. 
-By simplified, we mean absence of disturbance, i.e., we set $W=\set{0}$.
+we first plan a high-level nominal trajectory for the product system by ignoring the disturbances, and then synthesize low-level formally verified controllers for robustly tracking the nominal trajectory under worst-case disturbances.
 We summarize our approach for solving Prob.~\ref{problem} in Alg.~\ref{alg:main}.
 The approach is composed of three main steps:
 (1) Synthesize a global open-loop controller for the \emph{nominal system} as a single planner task on the product system to satisfy $\Phi_\varepsilon$;
@@ -147,7 +145,8 @@ The planner used for generating nominal trajectories in Step~\ref{step:planning}
 \end{equation*}
 where $\ell_k(\cdot,\cdot)$ denotes a quadratic objective function assigning cost to each pair of state and input before the end of horizon, $\ell_T(\cdot)$ represents a quadratic objective function assigning penalty to the final state $x^\times_T$ being away from the goal set $\goal'$. The constraints $g(x^\times_k,u^\times_k)\leq 0$ and $h(x^\times_k,u^\times_k)=0$ capture the requirement that at each time $k$ the state should not be in $\avoid'$, the state $x^\times_T$ should be in $\goal'$, and the input $u^\times_k$ should always be in $U^\times$.
 %
-In multi-robot scenarios, the inequality constraints can be used to define collision and obstacle avoidance specifications and the equality constraints can define fixed formation specification. \MS{Note that the reach-avoid specification is fulfilled if the corresponding equality and inequality constraints (i.e., $g(\cdot)\leq 0$, $h(\cdot)=0$) are satisfied at every time-step and thus choice of the quadratic objective function ($\ell_k$ for $k\in[0;T]$) is not crucial.}
+In multi-robot scenarios, the inequality constraints can be used to define collision and obstacle avoidance specifications and the equality constraints can define fixed formation specification. 
+Note that the reach-avoid specification is fulfilled if the corresponding equality and inequality constraints (i.e., $g(\cdot)\leq 0$, $h(\cdot)=0$) are satisfied at every time-step and thus choice of the quadratic objective function ($\ell_k$ for $k\in[0;T]$) is not crucial.
 %Following step~\ref{step:decompose} of Alg.~\ref{alg:main}, we get open-loop nominal trajectories $\rho^i$ for every agent.
 
 \begin{remark}
@@ -162,9 +161,9 @@ In multi-robot scenarios, the inequality constraints can be used to define colli
 \subsection{Guaranteed Trajectory Tracking} 
 
 Trajectories computed in the planning stage might not be followed in the presence of disturbance and therefore we need to use a 
-formally guaranteed tracker to satisfy the given reach-avoid specification. 
+formally guaranteed tracking controller to satisfy the given reach-avoid specification. 
 Our choice for this purpose is the so-called abstraction-based controller design (ABCD). 
-ABCD can handle nonlinear dynamics, (bounded) uncertainties and $\omega$-regular specifications. In particular, we use the SCOTS tool~\cite{Rungger2016scots} 
+ABCD can handle nonlinear dynamics, (bounded) uncertainties and $\omega$-regular specifications. In particular, we use the tool called SCOTS~\cite{Rungger2016scots} 
 for implementing ABCD. Next, we introduce briefly the basics of ABCD.
 For simpler notation, we omit the control system index $i$ in the rest of this section.
 
@@ -225,7 +224,7 @@ or use a larger robustness margin $\varepsilon$.
 
 
 \smallskip
-\noindent\textbf{Optmization: Local ABCD around the nominal trajectory}\hfill
+\noindent\textbf{Optmization: Local ABCD around the nominal trajectory.}\
 %
 The abstraction process of ABCD usually requires computation of abstract transitions over the whole compact set $\bound$, which is computationally expensive.
 Luckily, for Step~\ref{step:tracking} of Alg.~\ref{alg:main}, we only need to compute transitions in the $\varepsilon$-neighborhood of the given nominal trajectory.
@@ -233,12 +232,12 @@ Luckily, for Step~\ref{step:tracking} of Alg.~\ref{alg:main}, we only need to co
 Given a control system $\Sigma$, together with a reference open-loop trajectory $\rho=(x_{0,\nom},\ldots,x_{T,\nom})$ and a tube size $\varepsilon\in \reals_{>0}^n$, we iteratively construct a tube as union of $\varepsilon$-balls around the reference trajectory (note that we have omitted  the system index $i$ for simpler notation).
 Next, we compute finite state abstraction for $\Sigma$ for the chosen parameters $\eta_x$, $\eta_u$ by setting
 \begin{equation*}
-Domain:=\bigcup_{k=0}^T\ball_{\varepsilon}(x_{k,\nom}).
+\bound\coloneqq\bigcup_{k=0}^T\ball_{\varepsilon}(x_{k,\nom}).
 \end{equation*}
 %
-Experimentally, this local domain is key to scalability.
+In practice, this local computation of the abstraction is the key to scalability.
 \begin{remark}
-Our decentralized controller synthesis approach features an interplay between the global open-loop planning and local formal synthesis via the robustness parameter $\varepsilon$ and the discretization parameters $\eta_x,\eta_u$.  The parameter $\varepsilon$ should be large enough to allow deviation from the nominal trajectory caused by the disturbance. A small $\varepsilon$ makes the local specification $\Phi^i_{track}$ very strong for the ABCD synthesis thus requires large computational complexity with smaller discretization parameters $\eta_x,\eta_u$. On the other hand, large $\varepsilon$ makes the specification $\Phi_\varepsilon$ very conservative or infeasible for the global open-loop planning. Therefore, appropriate parameters should be selected iteratively for successful application of our synthesis approach. 
+Our decentralized controller synthesis approach features an interplay between the global open-loop planning and local formal synthesis via the robustness parameter $\varepsilon$ and the discretization parameters $\eta_x,\eta_u$.  The parameter $\varepsilon$ should be large enough to allow deviation from the nominal trajectory caused by the disturbance. A small $\varepsilon$ makes the local specification $\Phi^i_{track}$ very strong for the ABCD synthesis thus requiring large computational complexity with smaller discretization parameters $\eta_x,\eta_u$. On the other hand, large $\varepsilon$ makes the specification $\Phi_\varepsilon$ very conservative or infeasible for the global open-loop planning. Therefore, appropriate parameters should be selected iteratively for successful application of our synthesis approach. 
 \end{remark}
 % 
 % Finally, given the computed finite state abstraction $\widehat \Sigma$ and the specification in Eq.~\eqref{eq:ltl_spec}, we synthesize a symbolic controller using ABCD implemented in SCOTS~\cite{Rungger2016scots}. %\MS{perhaps we can add a discussion here about our actual implementation.}
